auth service improvements
+ better building process
+ jwt tokens and cookie