@@ -4,17 +4,17 @@ import io.github.s7i.doer.domain.rocksdb.RocksDb;
 import io.s7i.vertx.Configuration;
 import io.vertx.core.json.JsonArray;
 import io.vertx.ext.auth.webauthn.Authenticator;
-import lombok.extern.slf4j.Slf4j;
-
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import lombok.extern.slf4j.Slf4j;
 
 @Slf4j
 public class RocksdbRepository implements Repository {
 
     public static final String CF_AUTHUN = "authun";
-    private RocksDb rocksDb;
+    public static final String USER_ROLE = "user-role";
+    private final RocksDb rocksDb;
 
     public RocksdbRepository() {
         this(Configuration.ROCKSDB_PATH.get());
@@ -22,7 +22,7 @@ public class RocksdbRepository implements Repository {
 
     public RocksdbRepository(String dbPath) {
         rocksDb = new RocksDb(dbPath);
-        rocksDb.initColumnFamilies(CF_AUTHUN);
+        rocksDb.initColumnFamilies(CF_AUTHUN, USER_ROLE);
     }
 
     @Override
@@ -30,7 +30,7 @@ public class RocksdbRepository implements Repository {
         var userName = query.getUserName();
         var list = new ArrayList<Authenticator>();
         rocksDb.getAsString(CF_AUTHUN, userName).ifPresent(value -> {
-            log.info("getting from db: {}", value);
+            log.debug("getting from db: {}", value);
             var arr = new JsonArray(value);
 
             for (int i = 0; i < arr.size(); i++) {
@@ -49,17 +49,17 @@ public class RocksdbRepository implements Repository {
         var value = rocksDb.getAsString(CF_AUTHUN, userName);
         if (value.isPresent()) {
             var json = value.get();
-            log.info("getting from db: {}", json);
+            log.debug("getting from db: {}", json);
             var arr = new JsonArray(json);
             for (int i = 0; i < arr.size(); i++) {
                 list.add(new Authenticator(arr.getJsonObject(i)));
             }
             var update = list.stream()
-                    .filter(a -> a.getCredID().equals(authenticator.getCredID()))
-                    .map(e -> e.setCounter(e.getCounter() + 1))
-                    .count();
+                  .filter(a -> a.getCredID().equals(authenticator.getCredID()))
+                  .map(e -> e.setCounter(e.getCounter() + 1))
+                  .count();
 
-            log.info("updates of records: {}", update);
+            log.debug("updates of records: {}", update);
         } else {
             list.add(authenticator);
         }
@@ -68,7 +68,7 @@ public class RocksdbRepository implements Repository {
             arr.add(e.toJson());
         }
         var result = arr.toBuffer().toString();
-        log.info("putting: key: {}, value: {}", userName, result);
+        log.debug("putting: key: {}, value: {}", userName, result);
         rocksDb.put(CF_AUTHUN, userName, result);
 
         return null;
@@ -76,6 +76,13 @@ public class RocksdbRepository implements Repository {
 
     @Override
     public List<String> getUserRoles(String user) {
-        return List.of();
+        return rocksDb.getAsString(USER_ROLE, user).map(stored -> {
+            var arr = new JsonArray(stored);
+            List<String> list = new ArrayList<>(arr.size());
+            for (int i = 0; i < arr.size(); i++) {
+                list.add(arr.getString(i));
+            }
+            return list;
+        }).orElse(Collections.emptyList());
     }
 }
